--- a/skins/standard/index.css
+++ b/skins/standard/index.css
@@ -9,9 +9,19 @@
 #bugzilla-body:has(#home) {
   display: flex;
   flex-direction: column;
+  min-height: calc(100dvh - var(--global-header-height));
+}
+
+#bugzilla-body:has(#home) #message-container {
+  flex: none;
+}
+
+#main-inner:has(#home) {
+  flex: auto;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: calc(100dvh - var(--global-header-height));
 }
 
 #home {
